Fix<Configure Read> : Memperbaiki Layout Read dan menyambungkannya dengan data Dummy

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,13 @@
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31" >
         <activity
-            android:name=".ui.detail.DetailActivity"
+            android:name=".ui.orangHilang.TambahOrangHilang"
+            android:exported="false" />
+        <activity
+            android:name=".ui.orangHilang.DetailOrangHilangActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.orangHilang.DetailActivity"
             android:exported="false"
             android:label="@string/title_activity_detail"
             android:theme="@style/Theme.AppCompat" />
