--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31" >
         <activity
-            android:name=".ui.orangHilang.TambahOrangHilang"
+            android:name=".ui.orangHilang.TambahOrangHilangActivity"
             android:exported="false" />
         <activity
             android:name=".ui.orangHilang.DetailOrangHilangActivity"
