--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.foto.FotoActivity"
+            android:screenOrientation="portrait"
             android:exported="false" />
         <activity
             android:name=".ui.user.UserActivity"
@@ -32,16 +33,18 @@
         <activity
             android:name=".ui.home.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.lokala" />
+
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.guide.GuideActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+
         <activity
             android:name=".ui.splash_screen.SplashScreen"
             android:exported="true"
