--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,13 @@
         android:theme="@style/Theme.Lokala"
         tools:targetApi="31">
         <activity
-            android:name=".ui.foto.ResultFotoActivity"
+            android:name=".ui.user.detail.UserDetailOrangHilangActivity"
             android:exported="false" />
         <activity
-            android:name=".ui.foto.FotoActivity"
+            android:name=".ui.user.foto.ResultFotoActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.user.foto.FotoActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
@@ -27,21 +30,21 @@
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.orangHilang.tambah.TambahOrangHilangActivity"
+            android:name=".ui.pemerintah.orangHilang.tambah.TambahOrangHilangActivity"
             android:exported="false"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.Lokala" />
         <activity
-            android:name=".ui.orangHilang.detail.DetailOrangHilangActivity"
+            android:name=".ui.pemerintah.orangHilang.detail.DetailOrangHilangActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ui.home.MainActivity"
+            android:name=".ui.pemerintah.home.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.lokala"
             tools:targetApi="31" />
         <activity
-            android:name=".ui.login.LoginActivity"
+            android:name=".ui.pemerintah.login.LoginActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
         <activity
